--- a/app/package.json
+++ b/app/package.json
@@ -7,16 +7,20 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.3.0",
     "@types/i18next": "^13.0.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.30",
     "@types/react-dom": "^18.2.14",
     "@types/react-i18next": "^8.1.0",
+    "@types/tinymce": "^4.6.7",
     "bootstrap": "^5.3.2",
+    "draft-js": "^0.11.7",
     "i18next": "^23.6.0",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-xhr-backend": "^3.2.2",
+    "install": "^0.13.0",
     "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
@@ -25,6 +29,8 @@
     "react-scripts": "5.0.1",
     "react-social-icons": "^6.4.0",
     "styled-components": "^6.1.0",
+    "tinymce": "^6.7.2",
+    "tinymce-react": "^1.3.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -51,5 +57,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/draft-js": "^0.11.14",
+    "@types/react-draft-wysiwyg": "^1.13.6",
+    "react-router-dom": "^6.17.0"
   }
 }
