--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -61,6 +62,8 @@
   "devDependencies": {
     "@types/draft-js": "^0.11.14",
     "@types/react-draft-wysiwyg": "^1.13.6",
-    "react-router-dom": "^6.17.0"
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.17.0",
+    "redux": "^4.2.1"
   }
 }
