implementacao api listaAll com traducao automatica

--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.2.14",
     "@types/react-i18next": "^8.1.0",
     "@types/tinymce": "^4.6.7",
+    "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "draft-js": "^0.11.7",
     "i18next": "^23.6.0",
