--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.3.1",
+    "react-loading": "^2.0.3",
     "react-scripts": "5.0.1",
     "react-social-icons": "^6.4.0",
     "styled-components": "^6.1.0",
