--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -15,9 +17,11 @@
     "@types/react": "^18.2.30",
     "@types/react-dom": "^18.2.14",
     "@types/react-i18next": "^8.1.0",
+    "@types/react-router-dom": "^5.3.3",
     "@types/tinymce": "^4.6.7",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
+    "date-fns": "^2.30.0",
     "draft-js": "^0.11.7",
     "i18next": "^23.6.0",
     "i18next-browser-languagedetector": "^7.1.0",
@@ -30,7 +34,9 @@
     "react-i18next": "^13.3.1",
     "react-loading": "^2.0.3",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "react-social-icons": "^6.4.0",
+    "react-table": "^7.8.0",
     "styled-components": "^6.1.0",
     "tinymce": "^6.7.2",
     "tinymce-react": "^1.3.2",
@@ -64,8 +70,11 @@
   "devDependencies": {
     "@types/draft-js": "^0.11.14",
     "@types/react-draft-wysiwyg": "^1.13.6",
+    "@types/react-icons": "^3.0.0",
+    "@types/react-scroll": "^1.8.10",
+    "@types/react-table": "^7.7.18",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.17.0",
+    "react-router-dom": "^6.21.1",
     "redux": "^4.2.1"
   }
 }
