--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.3.1",
+    "react-icons": "^5.0.1",
     "react-loading": "^2.0.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
