--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/draft-js": "^0.11.14",
     "@types/react-draft-wysiwyg": "^1.13.6",
     "@types/react-icons": "^3.0.0",
@@ -77,6 +78,7 @@
     "@types/react-table": "^7.7.18",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.21.1",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "why-did-you-render": "^1.0.1"
   }
 }
