--- a/package.json
+++ b/package.json
@@ -12,14 +12,11 @@
     "@types/react-i18next": "^8.1.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.0",
-    "bootstrap": "^5.3.2",
     "date-fns": "^2.30.0",
-    "draft-js": "^0.11.7",
     "i18next": "^23.6.0",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-xhr-backend": "^3.2.2",
     "install": "^0.13.0",
-    "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
@@ -27,12 +24,8 @@
     "react-icons": "^5.0.1",
     "react-loading": "^2.0.3",
     "react-scripts": "5.0.1",
-    "react-scroll": "^1.9.0",
-    "react-social-icons": "^6.4.0",
     "react-table": "^7.8.0",
     "styled-components": "^6.1.0",
-    "tinymce": "^6.7.2",
-    "tinymce-react": "^1.3.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -61,15 +54,10 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/draft-js": "^0.11.14",
-    "@types/react-draft-wysiwyg": "^1.13.6",
     "@types/react-icons": "^3.0.0",
-    "@types/react-scroll": "^1.8.10",
     "@types/react-table": "^7.7.18",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.21.1",
-    "redux": "^4.2.1",
-    "why-did-you-render": "^1.0.1"
+    "redux": "^4.2.1"
   }
 }
