--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-i18next": "^8.1.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.0",
+    "bootstrap": "^5.3.2",
     "date-fns": "^2.30.0",
     "i18next": "^23.6.0",
     "i18next-browser-languagedetector": "^7.1.0",
