--- a/package.json
+++ b/package.json
@@ -61,5 +61,8 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.21.1",
     "redux": "^4.2.1"
-  }
+  },
+  "engines": {
+    "node": "14.x"
+  }  
 }
