--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "redux": "^4.2.1"
   },
   "engines": {
-    "node": "14.21.3",
-    "npm": "6.14.18"
+    "node": "14.x",
+    "npm": "6.x"
   }  
 }
