--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
     "styled-components": "^6.1.0",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -60,7 +59,8 @@
     "@types/react-table": "^7.7.18",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.21.1",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "typescript": "^5.4.2"
   },
   "engines": {
     "node": "14.x",
